--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,13 @@
           "max-width: fit-content"
         ]
       }
-    ]
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
+    ],
+    "no-inline-styles": "off"
   }
 }
